added add and edit product

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -32,7 +32,7 @@
             <a class="nav-link" routerLink="/products" >Продукти</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/admin-module" >Admin Module</a>
+            <a class="nav-link" routerLink="/admin-module" [routerLinkActive]="'admin-content'" >Admin Module</a>
           </li>
         </ul>
       </nav>
