--- a/src/app/pages/admin-module/admin-components/products/products.component.html
+++ b/src/app/pages/admin-module/admin-components/products/products.component.html
@@ -1,109 +1,80 @@
 
+
+<div class="card mb-3">
+    <h3 class="card-header text-center font-weight-bold text-uppercase py-4">Продукти</h3>
+</div>
 <igx-tabs tabsType="fixed">
   <igx-tabs-group label="Добави">
-      <div class="container">
-          <div class="row">
-          </div>
-          <div class="row">
-            <form (ngSubmit)="onSubmit()" class="col-6 col-centered">
-              <div [formGroup]="addProductForm" class="form-group">
-                <input placeholder="Product name" type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.name.errors }"/>
-                <div *ngIf="submitted && f.name.errors" class="invalid-feedback" role="alert">
-                  <div *ngIf="f.name.errors.required">name is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input placeholder="Description" formControlName="description" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.description.errors }" />
-                <div *ngIf="submitted && f.description.errors" class="invalid-feedback">
-                  <div *ngIf="f.description.errors.required">Description is required</div>
-                  <div *ngIf="f.description.errors.minlength">Description must be more than 6 characters</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input placeholder="Price" formControlName="price" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.price.errors }" />
-                <div *ngIf="submitted && f.price.errors" class="invalid-feedback">
-                  <div *ngIf="f.price.errors.required">Price is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input bsDatepicker placeholder="Launch" formControlName="launchDate" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.launchDate.errors }" />
-                <div *ngIf="submitted && f.launchDate.errors" class="invalid-feedback">
-                  <div *ngIf="f.launchDate.errors.required">Launch Date is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input bsDatepicker placeholder="Tournament Store Launch" formControlName="tournamentStoreLaunchDate" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.tournamentStoreLaunchDate.errors }" />
-                <div *ngIf="submitted && f.tournamentStoreLaunchDate.errors" class="invalid-feedback">
-                  <div *ngIf="f.tournamentStoreLaunchDate.errors.required">Tournament Store Launch Date is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input bsDatepicker placeholder="Konami Tournament Legal Date" formControlName="konamiTournamentLegalDate" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.konamiTournamentLegalDate.errors }" />
-                <div *ngIf="submitted && f.konamiTournamentLegalDate.errors" class="invalid-feedback">
-                  <div *ngIf="f.konamiTournamentLegalDate.errors.required">Konami Tournament Legal Date is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input placeholder="Cards per pack" formControlName="cardsPerPack" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.cardsPerPack.errors }" />
-                <div *ngIf="submitted && f.cardsPerPack.errors" class="invalid-feedback">
-                  <div *ngIf="f.cardsPerPack.errors.required">Cards per pack is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input placeholder="Size" formControlName="size" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.size.errors }" />
-                <div *ngIf="submitted && f.size.errors" class="invalid-feedback">
-                  <div *ngIf="f.size.errors.required">Size is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input placeholder="Short description" formControlName="shortDescription" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.shortDescription.errors }" />
-                <div *ngIf="submitted && f.shortDescription.errors" class="invalid-feedback">
-                  <div *ngIf="f.shortDescription.errors.required">Short description is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input placeholder="Quantity" formControlName="quantity" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }" />
-                <div *ngIf="submitted && f.quantity.errors" class="invalid-feedback">
-                  <div *ngIf="f.quantity.errors.required">Quantity is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input placeholder="On sale percent" formControlName="onSalePercent" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.onSalePercent.errors }" />
-                <div *ngIf="submitted && f.onSalePercent.errors" class="invalid-feedback">
-                  <div *ngIf="f.onSalePercent.errors.required">On sale percent is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input type="File" placeholder="Photo 1" formControlName="photo1" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.photo1.errors }" />
-                <div *ngIf="submitted && f.photo1.errors" class="invalid-feedback">
-                  <div *ngIf="f.photo1.errors.required">Photo 1 is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <input type="File" placeholder="Photo 2" formControlName="photo2" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.photo2.errors }" />
-                <div *ngIf="submitted && f.photo2.errors" class="invalid-feedback">
-                  <div *ngIf="f.photo2.errors.required">Photo 2 is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <select formControlName="categoryId" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.categoryId.errors }" >
-                <option *ngFor="let category of categores" [value]="category.name">{{category.name}}</option></select>
-                <div *ngIf="submitted && f.categoryId.errors" class="invalid-feedback">
-                  <div *ngIf="f.categoryId.errors.required">Category is required</div>
-                </div>
-              </div>
-              <div [formGroup]="addProductForm" class="form-group">
-                <button class="btn btn-success float-right">Add Product</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      categoryId: string;
-      inStock: string;
-
+      <app-add-edit-product [product]='newProduct'></app-add-edit-product>
   </igx-tabs-group>
   <igx-tabs-group label="Изтрии">
+    <div class="card-body">
+      <div id="table" class="table-editable">
+        <table class="table table-bordered table-responsive-md text-center">
+          <tr>
+            <th class="text-center" (click)="sort('Id');">#</th>
+            <th class="text-center" (click)="sort('Name');">Продукт</th>
+            <th class="text-center" (click)="sort('Category');">Категория</th>
+            <th class="text-center" (click)="sort('DateAdded');">Дата</th>
+            <th class="text-center">Премахване</th>
+          </tr>
+          <tr *ngFor="let product of productList; let id = index">
+            <td>
+              <span>{{product.id}}</span>
+            </td>
+            <td>
+              <span>{{product.name}}</span>
+            </td>
+            <td>
+                <span>{{product.categoryId}}</span>
+            </td>
+            <td>
+                <span>{{product.dateAdded}}</span>
+            </td>
+            <td>
+              <span class="table-remove">
+                <button (click)="remove(id)" class="my-0 btn btn-danger btn-rounded">X</button>
+              </span>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </igx-tabs-group>
   <igx-tabs-group label="Промени">
+    
+    <app-add-edit-product *ngIf="isSelectedProduct" [product]='selectedProduct' (deselectProductEmitter)="deselectProduct($event);"></app-add-edit-product>
+    <div *ngIf="!isSelectedProduct" class="card-body">
+      <div id="table" class="table-editable">
+        <table class="table table-bordered table-responsive-md text-center">
+          <tr>
+            <th class="text-center" (click)="sort('Id');">#</th>
+            <th class="text-center" (click)="sort('Name');">Продукт</th>
+            <th class="text-center" (click)="sort('Category');">Категория</th>
+            <th class="text-center" (click)="sort('DateAdded');">Дата</th>
+            <th class="text-center">Промяна</th>
+          </tr>
+          <tr *ngFor="let product of productList; let id = index">
+            <td>
+              <span>{{product.id}}</span>
+            </td>
+            <td>
+              <span>{{product.name}}</span>
+            </td>
+            <td>
+                <span>{{product.categoryId}}</span>
+            </td>
+            <td>
+                <span>{{product.dateAdded}}</span>
+            </td>
+            <td>
+              <span>
+                <button (click)="selectProduct(product)" class="my-0 btn btn-danger btn-rounded">Change</button>
+              </span>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
   </igx-tabs-group>
 </igx-tabs>
