--- a/src/app/pages/products/poduct-components/product-tile/product-tile.component.css
+++ b/src/app/pages/products/poduct-components/product-tile/product-tile.component.css
@@ -1,7 +1,7 @@
 .container {
     width: fit-content;
     width: 100%;
-    margin:30px;
+    margin: 30px;
 }
 
 .row {
@@ -9,7 +9,7 @@
 }
 
 img {
-    width: 200px;
-    height: 200px;
+    width: fit-content;
+    height: fit-content;
     max-width: 100%;
 }
