fixed bugs on cart

--- a/src/app/pages/new/new.component.css
+++ b/src/app/pages/new/new.component.css
@@ -1,4 +1,8 @@
 app-product-tile {
     display: inline-block;
-  }
-  
+}
+
+app-product-tile:hover {
+    box-shadow: 0px 0px 6px 0px #d1d1d1;
+    text-decoration: none;
+}
