--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-background></app-background>
 <app-header></app-header>
-<app-menu></app-menu>
+<app-menu [cartTotal]="'s'"></app-menu>
 <app-content>
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </app-content>
