--- a/src/app/pages/admin-module/admin-components/products/products.component.html
+++ b/src/app/pages/admin-module/admin-components/products/products.component.html
@@ -1,80 +1,91 @@
-
-
 <div class="card mb-3">
     <h3 class="card-header text-center font-weight-bold text-uppercase py-4">Продукти</h3>
 </div>
 <igx-tabs tabsType="fixed">
-  <igx-tabs-group label="Добави">
-      <app-add-edit-product [product]='newProduct'></app-add-edit-product>
-  </igx-tabs-group>
-  <igx-tabs-group label="Изтрии">
-    <div class="card-body">
-      <div id="table" class="table-editable">
-        <table class="table table-bordered table-responsive-md text-center">
-          <tr>
-            <th class="text-center" (click)="sort('Id');">#</th>
-            <th class="text-center" (click)="sort('Name');">Продукт</th>
-            <th class="text-center" (click)="sort('Category');">Категория</th>
-            <th class="text-center" (click)="sort('DateAdded');">Дата</th>
-            <th class="text-center">Премахване</th>
-          </tr>
-          <tr *ngFor="let product of productList; let id = index">
-            <td>
-              <span>{{product.id}}</span>
-            </td>
-            <td>
-              <span>{{product.name}}</span>
-            </td>
-            <td>
-                <span>{{product.categoryId}}</span>
-            </td>
-            <td>
-                <span>{{product.dateAdded}}</span>
-            </td>
-            <td>
-              <span class="table-remove">
-                <button (click)="remove(id)" class="my-0 btn btn-danger btn-rounded">X</button>
-              </span>
-            </td>
-          </tr>
-        </table>
-      </div>
-    </div>
-  </igx-tabs-group>
-  <igx-tabs-group label="Промени">
-    
-    <app-add-edit-product *ngIf="isSelectedProduct" [product]='selectedProduct' (deselectProductEmitter)="deselectProduct($event);"></app-add-edit-product>
-    <div *ngIf="!isSelectedProduct" class="card-body">
-      <div id="table" class="table-editable">
-        <table class="table table-bordered table-responsive-md text-center">
-          <tr>
-            <th class="text-center" (click)="sort('Id');">#</th>
-            <th class="text-center" (click)="sort('Name');">Продукт</th>
-            <th class="text-center" (click)="sort('Category');">Категория</th>
-            <th class="text-center" (click)="sort('DateAdded');">Дата</th>
-            <th class="text-center">Промяна</th>
-          </tr>
-          <tr *ngFor="let product of productList; let id = index">
-            <td>
-              <span>{{product.id}}</span>
-            </td>
-            <td>
-              <span>{{product.name}}</span>
-            </td>
-            <td>
-                <span>{{product.categoryId}}</span>
-            </td>
-            <td>
-                <span>{{product.dateAdded}}</span>
-            </td>
-            <td>
-              <span>
+    <igx-tabs-group label="Добави">
+        <app-add-edit-product [product]='newProduct'></app-add-edit-product>
+    </igx-tabs-group>
+    <igx-tabs-group label="Изтрии">
+        <div class="input-group md-form form-sm form-1 m-2 pl-0 ">
+            <div class="input-group-prepend">
+                <span class="input-group-text cyan lighten-2" id="basic-text1"><i class="fas fa-search"
+            aria-hidden="true">Име</i></span>
+            </div>
+            <input (input)="filterProductsByName($event);" class="form-control my-0 py-1" type="text" placeholder="Search by name" aria-label="Search">
+        </div>
+        <div class="card-body">
+            <div id="table" class="table-editable">
+                <table class="table table-bordered table-responsive-md text-center">
+                    <tr>
+                        <th class="text-center" (click)="sort('Id');">#</th>
+                        <th class="text-center" (click)="sort('Name');">Продукт</th>
+                        <th class="text-center" (click)="sort('Category');">Категория</th>
+                        <th class="text-center" (click)="sort('DateAdded');">Дата</th>
+                        <th class="text-center">Премахване</th>
+                    </tr>
+                    <tr *ngFor="let product of productList; let id = index">
+                        <td>
+                            <span>{{product.id}}</span>
+                        </td>
+                        <td>
+                            <span>{{product.name}}</span>
+                        </td>
+                        <td>
+                            <span>{{product.categoryId}}</span>
+                        </td>
+                        <td>
+                            <span>{{product.dateAdded}}</span>
+                        </td>
+                        <td>
+                            <span class="table-remove">
+                              <button (click)="remove(id)" class="my-0 btn btn-danger btn-rounded">X</button>
+                            </span>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </igx-tabs-group>
+    <igx-tabs-group label="Промени">
+        <div class="input-group md-form form-sm form-1 m-2 pl-0 ">
+            <div class="input-group-prepend">
+                <span class="input-group-text cyan lighten-2" id="basic-text1"><i class="fas fa-search"
+            aria-hidden="true">Име</i></span>
+            </div>
+            <input (input)="filterProductsByName($event);" class="form-control my-0 py-1" type="text" placeholder="Search by name" aria-label="Search">
+        </div>
+        <app-add-edit-product *ngIf="isSelectedProduct" [product]='selectedProduct' (deselectProductEmitter)="deselectProduct($event);"></app-add-edit-product>
+        <div *ngIf="!isSelectedProduct" class="card-body">
+            <div id="table" class="table-editable">
+                <table class="table table-bordered table-responsive-md text-center">
+                    <tr>
+                        <th class="text-center" (click)="sort('Id');">#</th>
+                        <th class="text-center" (click)="sort('Name');">Продукт</th>
+                        <th class="text-center" (click)="sort('Category');">Категория</th>
+                        <th class="text-center" (click)="sort('DateAdded');">Дата</th>
+                        <th class="text-center">Промяна</th>
+                    </tr>
+                    <tr *ngFor="let product of productList; let id = index">
+                        <td>
+                            <span>{{product.id}}</span>
+                        </td>
+                        <td>
+                            <span>{{product.name}}</span>
+                        </td>
+                        <td>
+                            <span>{{product.categoryId}}</span>
+                        </td>
+                        <td>
+                            <span>{{product.dateAdded}}</span>
+                        </td>
+                        <td>
+                            <span>
                 <button (click)="selectProduct(product)" class="my-0 btn btn-danger btn-rounded">Change</button>
               </span>
-            </td>
-          </tr>
-        </table>
-      </div>
-    </div>
-  </igx-tabs-group>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </igx-tabs-group>
 </igx-tabs>
