--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -4,12 +4,22 @@
             <app-filter-menu (priceEmitter)="filterProducts($event);" (categoriesEmitter)="filterProducts($event);"></app-filter-menu>
         </div>
         <div class="col-9">
-            <div class="row"> 
-            <div class="col-4" *ngFor='let product of productList'>
-                <app-product-tile  [product]="product" routerLink="/product-detail">
-                </app-product-tile>
+            <div class="row">
+                <div class="input-group md-form form-sm form-1 m-2 pl-0 ">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text cyan lighten-2" id="basic-text1"><i class="fas fa-search"
+                        aria-hidden="true">Име</i></span>
+                    </div>
+                    <input style="float:right;" (input)="filterProductsByName($event);" class="form-control my-0 py-1" type="text" placeholder="Search" aria-label="Search">
+                </div>
             </div>
-        </div>
+            <div class="row">
+
+                <div class="col-4" *ngFor='let product of productList'>
+                    <app-product-tile [product]="product" routerLink="/product-detail">
+                    </app-product-tile>
+                </div>
+            </div>
         </div>
     </div>
 </div>
