--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark" stickyClass="sticky-margin-navbar" ngStickyNav>
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" routerLink="/sale">Промоции</a>
