--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -24,7 +24,7 @@
         </span>
             </td>
             <td class="text-center column-4">
-                <span>{{item.product.price * item.quantity}}</span>
+                <span>{{(item.product.price * item.quantity).toFixed(2)}}</span>
             </td>
             <td class="text-center column-5">
                 <span>
