--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -1,14 +1,34 @@
 .content-background {
-    width:100%;
+    width: 100%;
     background-color: #FFF;
     position: relative;
-    z-index:4;
-    padding:20px;
+    z-index: 4;
+    padding: 20px;
     min-height: 50vh;
     border-radius: 15px;
 }
+
 .col-centered {
     float: none;
     margin: 0 auto;
     margin-top: 1%;
+}
+
+img {
+    height: 100vh;
+    background-size: cover;
+}
+
+#left-image {
+    position: fixed;
+    left: 0px;
+    float: left;
+    z-index: 2;
+}
+
+#right-image {
+    position: fixed;
+    right: 0px;
+    float: right;
+    z-index: 2;
 }
