--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,7 +1,15 @@
 <div class="container">
     <div class="row">
+        <div id="left-image">
+            <img src="assets/Images/left-image.png" />
+        </div>
+
+        <div id="right-image">
+            <img src="assets/Images/right-image.png" />
+        </div>
+
         <div id="content-background" class="col-10 content-background col-centered">
-          <router-outlet></router-outlet>
+            <router-outlet></router-outlet>
         </div>
     </div>
-  </div>
+</div>
