--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,9 +1,9 @@
 img {
-    width:100%;
-    height:auto;
+    width: auto;
+    height: 100px;
     background-size: cover;
     position: relative;
-    z-index:4;
+    z-index: 4;
 }
 
 .col-centered {
@@ -13,5 +13,7 @@ img {
 }
 
 #header-image {
-    margin-top: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
