--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
-<div class="container">
-  <div class="row">
-    <div id="header-image" class="col-8 col-centered">
-        <img src="assets/Images/header-image.jpg"/>
+<div class="container-fluid">
+    <div class="row">
+        <div id="header-image">
+            <img src="assets/Images/header-image-2.png" />
+        </div>
     </div>
-  </div>
 </div>
