--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,51 @@
 /* You can add global styles to this file, and also import other style files */
 
-table, th, td {
-    text-align:center
-  }
+.table-header-td-sortable {
+    background-color: #cedcd4;
+    cursor: pointer;
+}
 
-th:hover{
+html {
+    overflow-y: scroll;
+}
+
+table,
+th,
+td {
+    text-align: center
+}
+
+th:hover {
     background-color: #cedcd4;
     cursor: pointer;
 }
-tr:hover{
+
+tr:hover {
     background-color: #cedcd4;
     cursor: pointer;
 }
+
 .form-control {
     font-size: auto!important;
 }
-.icon { 
-    width:25px!important;
-    height:25px!important;
+
+.icon {
+    width: 25px!important;
+    height: 25px!important;
 }
+
 .add-image-button:hover {
     opacity: 0.5;
+}
+
+.add-button:hover {
+    filter: opacity(80%);
+}
+
+.sticky-margin-filter {
+    margin-top: 100px;
+}
+
+.sticky-margin-navbar {
+    margin-bottom: 50px;
 }
