removed sticky nav from filter

--- a/src/app/pages/filter-menu/filter-menu.component.html
+++ b/src/app/pages/filter-menu/filter-menu.component.html
@@ -1,5 +1,5 @@
 <div class="container" style="border-right: 1px solid rgba(0,0,0,0.15)">
-    <div stickyClass="sticky-margin-filter" ngStickyNav>
+    <div>
         <div>
             <p>Цена</p>
             <ng5-slider (userChange)="emitPrice($event);" [(value)]="minValue" [(highValue)]="maxValue" [options]="options">
