updated news component

--- a/src/app/pages/admin-module/admin-components/news/news.component.html
+++ b/src/app/pages/admin-module/admin-components/news/news.component.html
@@ -26,9 +26,9 @@
               {{news.date}}
             </span>
                     </td>
-                    <td class="mw-10">
+                    <td>
                         <span class="table-remove">
-              <button (click)="remove(id)" class="my-0 btn btn-danger btn-rounded">X</button>
+                <img class="icon"(click)="remove(id)" src="assets/Icons/delete-icon.svg">
             </span>
                     </td>
                 </tr>
