admin category is integrated with database

--- a/src/app/pages/admin-module/admin-components/categories/categories.component.html
+++ b/src/app/pages/admin-module/admin-components/categories/categories.component.html
@@ -34,7 +34,7 @@
             </table>
             <div class="row">
                 <div class="col-12 col-centered">
-                    <button type="submit" class="btn btn-block btn-success float-right">Save</button>
+                    <button (click)="saveCategories();" class="btn btn-block btn-success float-right">Save</button>
                 </div>
             </div>
         </div>
