fixed admin news component. now it operates with DB

--- a/src/app/pages/admin-module/admin-components/news/news.component.html
+++ b/src/app/pages/admin-module/admin-components/news/news.component.html
@@ -16,10 +16,10 @@
                 </tr>
                 <tr *ngFor="let news of newsList; let id = index">
                     <td class="mw-25">
-                        <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)" contenteditable="true">{{news.title}}</span>
+                        <span (keyup)="changeValue(id, 'title', $event)" (blur)="updateList(id, 'title', $event)" contenteditable="true">{{news.title}}</span>
                     </td>
                     <td class="mw-40">
-                        <span (keyup)="changeValue(id, 'name', $event)" (blur)="updateList(id, 'name', $event)" contenteditable="true">{{news.content}}</span>
+                        <span (keyup)="changeValue(id, 'content', $event)" (blur)="updateList(id, 'content', $event)" contenteditable="true">{{news.content}}</span>
                     </td>
                     <td class="date-col mw-25">
                         <span class="table-up">
@@ -35,7 +35,7 @@
             </table>
             <div class="row">
                 <div class="col-12 col-centered">
-                    <button type="submit" class="btn btn-block btn-success float-right">Save</button>
+                    <button  (click)="saveNews();" class="btn btn-block btn-success float-right">Save</button>
                 </div>
             </div>
         </div>
