--- a/src/app/pages/admin-module/admin-components/on-sale/on-sale.component.html
+++ b/src/app/pages/admin-module/admin-components/on-sale/on-sale.component.html
@@ -18,13 +18,13 @@
                 </tr>
                 <tr *ngFor="let product of products; let id = index">
                     <td class="text-center column-1">
-                        <span>{{product.id}}</span>
+                        <span>{{id+1}}</span>
                     </td>
                     <td class="text-center column-2">
                         <span>{{product.name}}</span>
                     </td>
                     <td class="text-center column-3">
-                        <span>{{product.categoryId}}</span>
+                        <span *ngFor="let category of categories;">{{product.categoryId === category.id ? category.name:""}}</span>
                     </td>
                     <td class="text-center column-4">
                         <span (keyup)="changeValue(id, 'onSalePercent', $event)" (blur)="updateList(id, 'onSalePercent', $event)" contenteditable="true">{{product.onSalePercent}}</span>
