--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,28 +1,26 @@
-
 <div class="container">
     <div class="row">
-      <div class="col-6 col-centered">
-          <h2>Login</h2>
-      </div>
+        <div class="col-6 col-centered">
+            <h2>Login</h2>
+        </div>
     </div>
     <div class="row">
-      <form (ngSubmit)="onSubmit()" class="col-6 col-centered">
-        <div [formGroup]="loginForm" class="form-group">
-          <input placeholder="Username" type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
-          <div *ngIf="submitted && f.username.errors" class="invalid-feedback" role="alert">
-            <div *ngIf="f.username.errors.required">Username is required</div>
-          </div>
-        </div>
-        <div [formGroup]="loginForm" class="form-group">
-          <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Password is required</div>
-            <div *ngIf="f.password.errors.minlength">Password must be more than 6 characters</div>
-          </div>
-        </div>
-        <div [formGroup]="loginForm" class="form-group">
-          <button class="btn btn-primary float-right">Register</button>
-        </div>
-      </form>
+        <form (ngSubmit)="onSubmit()" class="col-6 col-centered">
+            <div [formGroup]="loginForm" class="form-group">
+                <input placeholder="Username" type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                <div *ngIf="submitted && f.username.errors" class="invalid-feedback" role="alert">
+                    <div *ngIf="f.username.errors.required">Username is required</div>
+                </div>
+            </div>
+            <div [formGroup]="loginForm" class="form-group">
+                <input placeholder="Password" type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                    <div *ngIf="f.password.errors.required">Password is required</div>
+                </div>
+            </div>
+            <div [formGroup]="loginForm" class="form-group">
+                <button type="submit" class="btn btn-primary float-right">Login</button>
+            </div>
+        </form>
     </div>
-  </div>
+</div>
