fixed scrollbar, added some functions to user service, made a reLogin logic

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -9,7 +9,7 @@
         </div>
 
         <div id="content-background" class="col-10 content-background col-centered">
-            <router-outlet></router-outlet>
+            <router-outlet (activate) = "resumeLogin()"></router-outlet>
         </div>
     </div>
 </div>
