--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,7 +22,7 @@
             <a class="nav-link" routerLink="/login">Влез</a>
         </li>
         <li class="nav-item" *ngIf="isLoggedIn">
-            <a class="nav-link" href="#">Излез</a>
+            <a class="nav-link" (click)="logout()" routerLink="/login">Излез</a>
         </li>
         <li class="nav-item" *ngIf="!isLoggedIn">
             <a class="nav-link" routerLink="/register">Регистрация</a>
