added fade effect to cross icons, fixed address in user profile. made backend changes, made some global css styles

--- a/src/app/pages/admin-module/admin-components/news/news.component.html
+++ b/src/app/pages/admin-module/admin-components/news/news.component.html
@@ -28,7 +28,7 @@
                     </td>
                     <td>
                         <span class="table-remove">
-                <img class="icon"(click)="remove(id)" src="assets/Icons/delete-icon.svg">
+                <img class="icon delete-image-button"(click)="remove(id)" src="assets/Icons/delete-icon.svg">
             </span>
                     </td>
                 </tr>
