--- a/src/app/pages/profile/profile-components/addresses/addresses.component.html
+++ b/src/app/pages/profile/profile-components/addresses/addresses.component.html
@@ -2,26 +2,40 @@
     <h4 class="card-header text-center font-weight-bold text-uppercase py-4">Адреси</h4>
 </div>
 <div class="container p-4">
-    <span class="table-add float-right mb-3 mr-2">
-    <a class="text-success add-button">
-     <img class="add-button" src="assets/Icons/add-button.png"/>
-    </a>
-  </span>
-    <form (ngSubmit)="onSubmit()">
-        <div class="row">
-            <div class="col-12 col-centered">
-                <div [formGroup]="userSettingsForm" class="form-group">
-                    <textarea placeholder="Address" type="text" formControlName="address" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.address.errors }"></textarea>
-                    <div *ngIf="submitted && f.address.errors" class="invalid-feedback" role="alert">
-                        <div *ngIf="f.address.errors.required">Address is required</div>
+
+    <div class="row">
+        <div class="col-12 col-centered">
+            <span class="table-add float-right mb-3 mr-2">
+                <a class="text-success add-button">
+                    <img class="add-button" (click)="addAddress();" src="assets/Icons/add-button.png" />
+                </a>
+            </span>
+        </div>
+    </div>
+    <div class="row" *ngFor="let address of addresses; let id = index">
+        <div class="col-11 col-centered">
+            <div class="form-group">
+                <div>
+                    <textarea (click)="clearErrorClass(id);" placeholder="Address" type="text"
+                        [(ngModel)]="address.name" class="form-control"
+                        [ngClass]="{ 'is-invalid': !address.isValid }"></textarea>
+                    <div *ngIf="!address.isValid" class="invalid-feedback" role="alert">
+                        <div>Invalid address</div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-centered">
-                <button type="submit" class="btn btn-block btn-success float-right">Save</button>
-            </div>
+        <div class="col-1 col-centered">
+            <span class="table-remove">
+                <img [ngClass]="{
+                    'd-none':id === 0}" class=" icon delete-image-button" (click)="remove(id)"
+                    src="assets/Icons/delete-icon.svg">
+            </span>
         </div>
-    </form>
+    </div>
+    <div class="row">
+        <div class="col-12 col-centered">
+            <button (click)="saveAddresses();" class="btn btn-block btn-success float-right">Save</button>
+        </div>
+    </div>
 </div>
