--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -32,7 +32,8 @@
                     </td>
                     <td class="text-center column-5">
                         <span>
-                            <img class="icon delete-image-button" (click)="removeFromCart(item);" src="assets/Icons/delete-icon.svg">
+                            <img class="icon delete-image-button" (click)="removeFromCart(item);"
+                                src="assets/Icons/delete-icon.svg">
                         </span>
                     </td>
                 </tr>
@@ -41,7 +42,8 @@
         <div class="container">
             <div class="row">
                 <div class="form-group col-6">
-                    <button (click)="navigateToProducts()" type="submit" class="btn btn-block btn-success float-right">Продължи с пазаруването</button>
+                    <button (click)="navigateToProducts()" type="submit"
+                        class="btn btn-block btn-success float-right">Продължи с пазаруването</button>
                 </div>
                 <div class="form-group col-6">
                     <button (click)="forward()" class="btn btn-block btn-success float-right">Напред</button>
@@ -50,6 +52,55 @@
         </div>
     </igx-tabs-group>
     <igx-tabs-group label="Данни" #customerInfo>
-        Данни
+        <div class="container p-4">
+            <form>
+                <div class="row">
+                    <div class="col-12 col-centered">
+                        Данни за клиента
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-centered">
+                        <input type="text" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-centered">
+                        <choose-address [addresses]="addresses" ></choose-address>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-centered">
+                        Начин на доставка
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-centered">
+                            <input type="radio"/>Econt
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-centered">
+                        Начин на плащане
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-centered">
+                            <input type="radio" />Наложен платеж
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-centered">
+                        Коментар
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-centered">
+                        <textarea  placeholder="Address" type="text" class="form-control"
+                ></textarea>
+                    </div>
+                </div>
+            </form>
+        </div>
     </igx-tabs-group>
 </igx-tabs>
