--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,106 +1,136 @@
 <div class="card mb-3">
     <h4 class="card-header text-center font-weight-bold text-uppercase py-4">Количка</h4>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-8">
+            <tabset>
+                <tab heading="Преглед">
+                    <div id="table" class="table-editable">
+                        <table class="table table-bordered table-responsive-md text-center"
+                            *ngFor="let item of cartItems; let id = index">
+                            <tr *ngIf="id === 0">
+                                <td class="text-center column-1">Продукт</td>
+                                <td class="text-center column-2">Ед.цена</td>
+                                <td class="text-center column-3">Брой</td>
+                                <td class="text-center column-4">Сума</td>
+                                <td class="text-center column-5"></td>
+                            </tr>
+                            <tr>
+                                <td class="text-center column-1">
+                                    <span><img class="cart-image" src="{{item.product.photo1Base64}}" /></span>
+                                    <span>{{item.product.name}}</span>
+                                </td>
+                                <td class="text-center column-2">
+                                    <span>{{item.product.price}}</span>
+                                </td>
+                                <td class="text-center column-3">
+                                    <span>
+                                        <ng-number-picker [(value)]="item.quantity" [size]='sm'></ng-number-picker>
+                                    </span>
+                                </td>
+                                <td class="text-center column-4">
+                                    <span>{{(item.product.price * item.quantity).toFixed(2)}}</span>
+                                </td>
+                                <td class="text-center column-5">
+                                    <span>
+                                        <img class="icon delete-image-button" (click)="removeFromCart(item);"
+                                            src="assets/Icons/delete-icon.svg">
+                                    </span>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="form-group col-6">
+                                <button (click)="navigateToProducts()" type="submit"
+                                    class="btn btn-block btn-success float-right">Продължи с пазаруването</button>
+                            </div>
+                            <div class="form-group col-6">
+                                <button (click)="forward()"
+                                    class="btn btn-block btn-success float-right">Напред</button>
+                            </div>
+                        </div>
+                    </div>
+                </tab>
+                <tab heading="Данни" #customerInfo>
+                    <div class="container p-4">
+                            <div class="row">
+                                <div class="section col-10 col-centered">
+                                    <span class="section-number">
+                                        1
+                                    </span>
+                                    <span class="section-name">
+                                        Данни за клиента
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="section col-10 col-centered">
+                                    <input placeholder="Names" [(ngModel)]="names" type="text" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="section col-10 col-centered">
+                                    <choose-address [addresses]="addresses"></choose-address>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="section col-10 col-centered">
+                                    <span class="section-number">
+                                        2
+                                    </span>
+                                    <span class="section-name">
+                                        Начин на доставка
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="section col-10 col-centered">
+                                    <input type="radio" checked="checked" />Econt
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="section col-10 col-centered">
+                                    <span class="section-number">
+                                        3
+                                    </span>
+                                    <span class="section-name">
+                                        Начин на плащане
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="section col-10 col-centered">
+                                    <input type="radio" checked="checked" />Наложен платеж
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="section col-10 col-centered">
+                                    <span class="section-number">
+                                        4
+                                    </span>
+                                    <span class="section-name">
+                                        Коментар
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="section col-10 col-centered">
+                                    <textarea placeholder="Comment" type="text" class="form-control"></textarea>
+                                </div>
+                            </div>
 
-<igx-tabs tabsType="fixed">
-    <igx-tabs-group label="Преглед">
-        <div id="table" class="table-editable">
-            <table class="table table-bordered table-responsive-md text-center"
-                *ngFor="let item of cartItems; let id = index">
-                <tr *ngIf="id === 0">
-                    <td class="text-center column-1">Продукт</td>
-                    <td class="text-center column-2">Ед.цена</td>
-                    <td class="text-center column-3">Брой</td>
-                    <td class="text-center column-4">Сума</td>
-                    <td class="text-center column-5"></td>
-                </tr>
-                <tr>
-                    <td class="text-center column-1">
-                        <span><img class="cart-image" src="{{item.product.photo1Base64}}" /></span>
-                        <span>{{item.product.name}}</span>
-                    </td>
-                    <td class="text-center column-2">
-                        <span>{{item.product.price}}</span>
-                    </td>
-                    <td class="text-center column-3">
-                        <span>
-                            <ng-number-picker [(value)]="item.quantity" [size]='sm'></ng-number-picker>
-                        </span>
-                    </td>
-                    <td class="text-center column-4">
-                        <span>{{(item.product.price * item.quantity).toFixed(2)}}</span>
-                    </td>
-                    <td class="text-center column-5">
-                        <span>
-                            <img class="icon delete-image-button" (click)="removeFromCart(item);"
-                                src="assets/Icons/delete-icon.svg">
-                        </span>
-                    </td>
-                </tr>
-            </table>
+                            <div class="row">
+                                <div class="section col-10 col-centered">
+                                    <button class="btn btn-block btn-success float-right"
+                                        (click)="pay();">Плати</button>
+                                </div>
+                            </div>
+                    </div>
+                </tab>
+            </tabset>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="form-group col-6">
-                    <button (click)="navigateToProducts()" type="submit"
-                        class="btn btn-block btn-success float-right">Продължи с пазаруването</button>
-                </div>
-                <div class="form-group col-6">
-                    <button (click)="forward()" class="btn btn-block btn-success float-right">Напред</button>
-                </div>
-            </div>
-        </div>
-    </igx-tabs-group>
-    <igx-tabs-group label="Данни" #customerInfo>
-        <div class="container p-4">
-            <form>
-                <div class="row">
-                    <div class="col-12 col-centered">
-                        Данни за клиента
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-centered">
-                        <input type="text" />
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-centered">
-                        <choose-address [addresses]="addresses" ></choose-address>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-centered">
-                        Начин на доставка
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-centered">
-                            <input type="radio"/>Econt
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-centered">
-                        Начин на плащане
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-centered">
-                            <input type="radio" />Наложен платеж
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-centered">
-                        Коментар
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 col-centered">
-                        <textarea  placeholder="Address" type="text" class="form-control"
-                ></textarea>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </igx-tabs-group>
-</igx-tabs>
+    </div>
+</div>
