--- a/src/app/pages/admin-module/admin-components/orders/orders.component.html
+++ b/src/app/pages/admin-module/admin-components/orders/orders.component.html
@@ -14,7 +14,7 @@
                     <td class="text-center column-6" (click)="sort('Total', unconfirmedOrders);">Общо</td>
                     <td class="text-center column-7">Напред</td>
                 </tr>
-                <tr (click)="toggleProducts(order);">
+                <tr (click)="toggleProducts(order);" class="order-table-row">
                     <td class="text-center column-1">
                         <span>{{order.id}}</span>
                     </td>
@@ -39,7 +39,7 @@
             </span>
                     </td>
                 </tr>
-                <tr *ngIf='order.products' [ngClass]="{'d-none': !order.showProducts}">
+                <tr *ngIf='order.cartItems' [ngClass]="{'d-none': !order.showProducts}">
                     <td colspan="7" style="background-color: #d6d6d63b">
                         <table style="margin-left: auto;margin-right: auto">
                             <tr>
@@ -49,21 +49,21 @@
                                 <td class="text-center">Цена</td>
                                 <td class="text-center">Общо</td>
                             </tr>
-                            <tr *ngFor="let product of order.products; let id = index">
+                            <tr *ngFor="let cartItem of order.cartItems; let id = index">
                                 <td>
-                                    <span>{{product.id}}</span>
+                                    <span>{{cartItem.product.id}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.name}}</span>
+                                    <span>{{cartItem.product.name}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.quantity}}</span>
+                                    <span>{{cartItem.product.quantity}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.price}}</span>
+                                    <span>{{cartItem.product.price}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.price * product.quantity}}</span>
+                                    <span>{{cartItem.product.price * cartItem.quantity}}</span>
                                 </td>
                             </tr>
                         </table>
@@ -110,7 +110,7 @@
             </span>
                     </td>
                 </tr>
-                <tr *ngIf='order.products' [ngClass]="{'d-none': !order.showProducts}">
+                <tr *ngIf='order.cartItems' [ngClass]="{'d-none': !order.showProducts}">
                     <td colspan="7" style="background-color: #d6d6d63b">
                         <table style="margin-left: auto;margin-right: auto">
                             <tr>
@@ -120,21 +120,21 @@
                                 <td class="text-center">Цена</td>
                                 <td class="text-center">Общо</td>
                             </tr>
-                            <tr *ngFor="let product of order.products; let id = index">
+                            <tr *ngFor="let cartItem of order.cartItems; let id = index">
                                 <td>
-                                    <span>{{product.id}}</span>
+                                    <span>{{cartItem.product.id}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.name}}</span>
+                                    <span>{{cartItem.product.name}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.quantity}}</span>
+                                    <span>{{cartItem.product.quantity}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.price}}</span>
+                                    <span>{{cartItem.product.price}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.price * product.quantity}}</span>
+                                    <span>{{cartItem.product.price * cartItem.quantity}}</span>
                                 </td>
                             </tr>
                         </table>
@@ -181,7 +181,7 @@
             </span>
                     </td>
                 </tr>
-                <tr *ngIf='order.products' [ngClass]="{'d-none': !order.showProducts}">
+                <tr *ngIf='order.cartItems' [ngClass]="{'d-none': !order.showProducts}">
                     <td colspan="7" style="background-color: #d6d6d63b">
                         <table style="margin-left: auto;margin-right: auto">
                             <tr>
@@ -191,21 +191,21 @@
                                 <td class="text-center">Цена</td>
                                 <td class="text-center">Общо</td>
                             </tr>
-                            <tr *ngFor="let product of order.products; let id = index">
+                            <tr *ngFor="let cartItem of order.cartItems; let id = index">
                                 <td>
-                                    <span>{{product.id}}</span>
+                                    <span>{{cartItem.product.id}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.name}}</span>
+                                    <span>{{cartItem.product.name}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.quantity}}</span>
+                                    <span>{{cartItem.product.quantity}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.price}}</span>
+                                    <span>{{cartItem.product.price}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.price * product.quantity}}</span>
+                                    <span>{{cartItem.product.price * cartItem.quantity}}</span>
                                 </td>
                             </tr>
                         </table>
@@ -251,7 +251,7 @@
               </span>
                     </td>
                 </tr>
-                <tr *ngIf='order.products' [ngClass]="{'d-none': !order.showProducts}">
+                <tr *ngIf='order.cartItems' [ngClass]="{'d-none': !order.showProducts}">
                     <td colspan="7" style="background-color: #d6d6d63b">
                         <table class="table-striped" style="margin-left: auto;margin-right: auto">
                             <tr>
@@ -261,21 +261,21 @@
                                 <td class="text-center">Цена</td>
                                 <td class="text-center">Общо</td>
                             </tr>
-                            <tr *ngFor="let product of order.products; let id = index">
+                            <tr *ngFor="let cartItem of order.cartItems; let id = index">
                                 <td>
-                                    <span>{{product.id}}</span>
+                                    <span>{{cartItem.product.id}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.name}}</span>
+                                    <span>{{cartItem.product.name}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.quantity}}</span>
+                                    <span>{{cartItem.product.quantity}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.price}}</span>
+                                    <span>{{cartItem.product.price}}</span>
                                 </td>
                                 <td>
-                                    <span>{{product.price * product.quantity}}</span>
+                                    <span>{{cartItem.product.price * cartItem.quantity}}</span>
                                 </td>
                             </tr>
                         </table>
