--- a/src/app/pages/products/poduct-components/product-tile/product-tile.component.css
+++ b/src/app/pages/products/poduct-components/product-tile/product-tile.component.css
@@ -27,3 +27,14 @@ img {
     width: 75%;
     font-size: 14px;
 }
+
+.product-price{
+
+    width: 20%;
+    font-size: 14px;
+}
+
+.product-rating{
+    width:80%;
+    float:right;
+}
