--- a/src/app/pages/cart/cart.component.css
+++ b/src/app/pages/cart/cart.component.css
@@ -1,76 +1,96 @@
 .cart-image {
-    width: 75px;
-    height: auto;
+  width: 75px;
+  height: auto;
 }
 
 .igx-tabs__item-label {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .column-1 {
-    width: 45%;
+  width: 45%;
 }
 
 .column-2 {
-    width: 10%;
-    word-break: break-all;
+  width: 10%;
+  word-break: break-all;
 }
 
 .column-3 {
-    width: 20%;
-    word-break: break-all;
+  width: 20%;
+  word-break: break-all;
 }
 
 .column-4 {
-    width: 10%;
+  width: 10%;
 }
 
 .column-5 {
-    width: 10%;
+  width: 10%;
 }
 
 .column-6 {
-    width: 10%;
+  width: 10%;
 }
 
 .column-7 {
-    width: 10%;
+  width: 10%;
 }
 
 table {
-    margin: auto;
+  margin: auto;
 }
 
 .section-number {
+  float: left;
+  width: 52px;
+  height: 52px;
+  line-height: 52px;
+  margin: 0px 20px 0px 0px;
+  background: #e7e7e7;
+  text-align: center;
+  font-size: 24px;
+  color: #444;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.section-name {
+  float: left;
+  width: auto;
+  height: auto;
+  padding: 15px 0px 15px 0px;
+  font-size: 18px;
+  line-height: 22px;
+  color: #444;
+}
+
+.section {
+  float: left;
+  width: 100%;
+  height: auto;
+  padding: 0px;
+  margin: 10px 10px 20px 0px;
+  border-top: 1px solid #f1f1f1;
+  border-bottom: 1px solid #f1f1f1;
+}
+
+.total-section-text {
     float: left;
-    width: 52px;
-    height: 52px;
-    line-height: 52px;
     margin: 0px 20px 0px 0px;
-    background: #e7e7e7;
+    /* background: #e7e7e7; */
     text-align: center;
     font-size: 24px;
     color: #444;
     font-weight: bold;
     text-transform: uppercase;
 }
-
-.section-name{
+.total-section-price {
     float: left;
     width: auto;
     height: auto;
-    padding: 15px 0px 15px 0px;
-    font-size: 18px;
-    line-height: 22px;
+    /* padding: 15px 0px 15px 0px; */
+    font-size: 24px;
+    font-weight: bold;
     color: #444;
-}
-
-.section {
-    float: left;
-    width: 100%;
-    height: auto;
-    padding: 0px;
-    margin: 10px 10px 20px 0px;
-    border-top: 1px solid #f1f1f1;
-    border-bottom: 1px solid #f1f1f1;
 }
